[package]
name = "oldimgtool"
version = "1.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
byteorder = "1.4.3"
binrw = "0.10.0"
phf = { version = "0.11.1", features = ["macros"] }
hex = "0.4.3"
crc32fast = "1.3.2"
openssl = { version="0.10.40" } #add "features = ["vendored"]" for cross-compilation support
openssl-sys = "0.9.76"
colored = "2.0.0"
memchr = "2.5.0"

[build-dependencies]
bindgen = "0.61.0"
cc = "1.0.73"